# saudi-sentinal

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data-pipeline/: requirements.txt  seed_aois.py
data-pipeline/catalog/: __init__.py  tile_catalog.py  tile_store.py
data-pipeline/config/: aois.yaml
data-pipeline/ingestion/: cdse_client.py  ingest.py  tile_processor.py
data_pipeline/: api.py  seed_aois.py
data_pipeline/catalog/: tile_catalog.py  tile_store.py
data_pipeline/config/: settings.py
data_pipeline/ingestion/: __init__.py  cdse_client.py  ingest.py  tile_processor.py
data_pipeline/tiling/: __init__.py  chip_creator.py
docker/: data-pipeline.Dockerfile  data_pipeline.Dockerfile  docker-compose.level0.yml  docker-compose.level2.yml  docker-compose.level3.yml  docker-compose.yml  frontend.Dockerfile  init.sql  mlops.Dockerfile  notebooks.Dockerfile  postgres.Dockerfile  system.Dockerfile
docs/plans/: LEVEL-0-DATA-PIPELINE.md  LEVEL-2-MLOPS.md  LEVEL-3-SYSTEM.md  README.md
mlops/: requirements.txt
mlops/dags/: __init__.py  crop_mapping_dag.py  desertification_dag.py  dune_migration_dag.py  flash_flood_dag.py  green_riyadh_dag.py  groundwater_dag.py  neom_tracker_dag.py  oil_spill_dag.py  urban_sprawl_dag.py
mlops/monitoring/: drift_detector.py
mlops/registry/: mlflow_config.py
mlops/serving/: __init__.py  main.py
mlops/training/: __init__.py
notebooks/01-urban-sprawl/: README.md  urban_sprawl.ipynb
notebooks/02-green-riyadh/: green_riyadh.ipynb
shared/: __init__.py
tests/: __init__.py  conftest.py
(+92 files in other folders)
