[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "saudi-sentinel-ai"
version = "0.1.0"
description = "Satellite-based earth observation AI platform for Saudi Arabia using Copernicus/Sentinel data"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "testcontainers>=4.0",
    "ruff>=0.2",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "data_pipeline*", "mlops*", "system*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
